--- a/ComicBookNormalize/packages/repositories.config
+++ b/ComicBookNormalize/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\ComicBookNormalize\packages.config" />
+  <repository path="..\Common\packages.config" />
   <repository path="..\UI\packages.config" />
 </repositories>
